@@ -194,7 +194,6 @@ wants		{/* EMPTY */}
 options		{/* EMPTY */}
 [;:,]		{/* EMPTY */}
 
-(auto)|(AUTO)	{ yylval.proto = P_AUTO;  return PROTO; }
 (sdps)|(SDPS)   { return SDPS; }
 (pop3)|(POP3)	{ yylval.proto = P_POP3;  return PROTO; }
 (imap)|(IMAP)	{ yylval.proto = P_IMAP;  return PROTO; }
